# IMClient

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp
Common/: GlobalDefine.cpp  GlobalDefine.h  HttpMgr.cpp  HttpMgr.h  LoadUIWgtBase.cpp  LoadUIWgtBase.h  PublicFun.cpp  PublicFun.h  RedDotNode.cpp  RedDotNode.h  SingletonTemplate.cpp  SingletonTemplate.h  TcpMgr.cpp  TcpMgr.h  UserMgr.cpp  UserMgr.h
Resource/: Assets.qrc  CMakeLists.txt
Resource/Skin/: AddFriend.ui  AddLstUserItem.ui  AddUserItem.ui  ApplyFriendLstItem.ui  ApplyFriendWgt.ui  ChatArea.ui  ChatPage.ui  ChatWgt.ui  Chatuserwid.ui  CloseTitle.ui  ConLstUserItem.ui  Loading.ui  LoginDialog.ui  MainWnd.ui  MessageItemOther.ui  MessageItemSelf.ui  Registerdialog.ui  ResetPwdWgt.ui  StylesSheet.qss  UserItemWgt.qss
Widgets/: AddUserItem.cpp  AddUserItem.h  ApplyFriend.cpp  ApplyFriend.h  ApplyFriendLstItem.cpp  ApplyFriendLstItem.h  ApplyFriendPage.cpp  ApplyFriendPage.h  ChatArea.cpp  ChatArea.h  ChatPageWgt.cpp  ChatPageWgt.h  ChatUserList.cpp  ChatUserList.h  ChatUserWid.cpp  ChatUserWid.h  CloseTitleWgt.cpp  CloseTitleWgt.h  ConUserItem.cpp  ConUserItem.h  ContactUserList.cpp  ContactUserList.h  CustomList.cpp  CustomList.h  InputTextEdit.cpp  InputTextEdit.h  ListApplyFriend.cpp  ListApplyFriend.h  ListItemWgt.cpp  ListItemWgt.h  LoadingWgt.cpp  LoadingWgt.h  LoginDlg.cpp  LoginDlg.h  MainChatWgt.cpp  MainChatWgt.h  MsgItem.cpp  MsgItem.h  RegisterWgt.cpp  RegisterWgt.h  (+11 more)
configs/: config.ini
